[project]
name = "kaskade"
version = "4.0.5"
description = "kaskade is a text user interface for kafka"
authors = [{ name = "Saúl Piña", email = "sauljabin@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["kafka", "kaskade"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10,<3.15"
dependencies = [
    "cloup>=3.0",
    "textual>=6.5",
    "confluent-kafka[avro,json,protobuf]>=2.12",
]

[project.scripts]
kaskade = "kaskade.main:cli"

[project.urls]
homepage = "https://github.com/sauljabin/kaskade"
repository = "https://github.com/sauljabin/kaskade"
documentation = "https://github.com/sauljabin/kaskade"
changelog = "https://github.com/sauljabin/kaskade/blob/main/CHANGELOG.md"
issues = "https://github.com/sauljabin/kaskade/issues"
funding = "https://github.com/sponsors/sauljabin"

[tool.poetry.group.dev.dependencies]
black = "*"
faker = "*"
pre-commit = "*"
ruff = "*"
mypy = "*"
types-attrs = "*"
types-protobuf = "*"
changeloggh = "*"
textual-dev = "*"
typos = "*"
parameterized = "*"
testcontainers = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.typos]
type.lock.extend-glob = ["*.lock"]
type.lock.check-file = true
